--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flame: ^1.15.0
   flame_tiled: ^1.18.3
   animated_text_kit: ^4.2.2
+  flame_audio: ^1.3.3
 
 dev_dependencies:
   flutter_test:
@@ -64,10 +65,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/tiles/
-     - assets/images/
-     - assets/images/groundTiles/
-     - assets/images/gems/
+    - assets/tiles/
+    - assets/images/
+    - assets/audio/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
