--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,12 @@ dependencies:
   flame_tiled: ^1.18.3
   animated_text_kit: ^4.2.2
   flame_audio: ^1.3.3
+  add_to_google_wallet: ^0.0.3
+  uuid: ^4.3.3
+  url_launcher: ^6.2.5
+  google_fonts: ^6.2.0
+  flutter_rating_bar: ^4.0.1
+  dart_jsonwebtoken: ^2.13.0
 
 dev_dependencies:
   flutter_test:
